2011-10-17  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dcrt0.cc (dll_crt0_1): Copy argv before passing to main().

2011-10-17  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* sigproc.cc (proc_terminate): Avoid setting ppid to 1 if we're execing.

2011-10-15  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* cygerrno.h (__set_errno): Modify debugging output to make searching
	strace logs easier.

	Throughout, change /dev/tty* to /dev/pty*.
	Throughout, add flags argument to fhandler_*::dup methods.
	* devices.in: Rename (temporarily?) /dev/ttyN to /dev/ptyN.  Add
	/dev/ptymN devices for pty masters.
	* devices.cc: Regenerate.
	* devices.h (MAX_CONSOLES): Set to max number supported by devices.in.
	(fh_devices::FH_PTMX): Rename from FH_PTYM.
	(device::operator int): Return by reference.
	* dtable.cc (fh_alloc): Take pc as an argument rather than just the
	device.  This makes debugging easier since more information is
	available.  Actually implement handling for already-allocated pty
	master devices.  Make different decisions when generating fhandler for
	not-opened devices.  Add kludge to deal with opening /dev/tty.
	(cnew_no_ctor): New macro.
	(build_fh_pc): Make debugging output more verbose.  Use new clone()
	fhandler interface to duplicate archetypes.  Reset last term opened.
	(dtable::dup_worker): Use Use new clone() fhandler interface to
	duplicate archetypes.  Pass flags to child dup handler.
	(dtable::dup3): Set O_NOCTTY flag if newfd is not stdin/stdout/stderr.
	* fhandler.cc (fhandler_base::reset): Rename from operator =() and
	reduce functionality and sense of copy direction.
	(fhandler_base::open_with_arch): Use published interface to query
	io_handle().  Use new copyto() fhandler method to copy from/to found
	archetype.
	* fhandler.h: Throughout, delete size(), add copyout, clone, and
	fhandler_* (void *) methods.
	(fhandler_base::reset): Rename from operator =().
	(fhandler_termios::is_dev_tty): Delete.